--- a/NgheNhacTrucTuyen/Views/Home/BaiHat.cshtml
+++ b/NgheNhacTrucTuyen/Views/Home/BaiHat.cshtml
@@ -106,7 +106,7 @@
                                                                     aria-label="Lưu vào Thư viện"
                                                                     class="Fm7C3gdh5Lsc9qSXrQwO"
                                                                     data-testid="add-button">
-                                                                <i class="fa-regular fa-heart fa-2x"></i>
+                                                                <i class="fa-solid fa-heart fa-2x" style="color: pink;"></i>
                                                             </button><button type="button"
                                                                              aria-haspopup="menu"
                                                                              aria-label="Các tùy chọn khác cho Chiều Hôm Ấy"
@@ -139,7 +139,7 @@
                                                          aria-colindex="1"
                                                          aria-sort="none"
                                                          tabindex="-1">
-                                                        #
+                                                      
                                                     </div>
                                                     <div class="gvLrgQXBFVW6m9MscfFA"
                                                          role="columnheader"
@@ -147,7 +147,7 @@
                                                          aria-sort="none"
                                                          tabindex="-1">
                                                         <div class="ASYv4mEu1lXEHVa04HqY">
-                                                            <span class="Type__TypeElement-goli3j-0 llIfol standalone-ellipsis-one-line">tiêu đề</span>
+                                                            <span class="Type__TypeElement-goli3j-0 llIfol standalone-ellipsis-one-line">Tiêu đề</span>
                                                         </div>
                                                     </div>
                                                     <div class="HcMOFLaukKJdK5LfdHh0"
@@ -195,7 +195,7 @@
                                                                  aria-colindex="1"
                                                                  tabindex="-1">
                                                                 <div class="VpYFchIiPg3tPhBGyynT">
-                                                                    <span class="Type__TypeElement-goli3j-0 ipKmGr VrRwdIZO0sRX1lsWxJBe">1</span><button class="RfidWIoz8FON2WhFoItU" onclick="playaudio1('/Sound/@ViewBag.baihat.Files', '/image/@ViewBag.baihat.image', '@ViewBag.baihat.TenBH', '@ViewBag.baihat.CaSi.TenCS' )">
+                                                                    <span class="Type__TypeElement-goli3j-0 ipKmGr VrRwdIZO0sRX1lsWxJBe"></span><button class="RfidWIoz8FON2WhFoItU" onclick="playaudio1('/Sound/@ViewBag.baihat.Files', '/image/@ViewBag.baihat.image', '@ViewBag.baihat.TenBH', '@ViewBag.baihat.CaSi.TenCS' )">
                                                                         <i class="fa-solid fa-play"></i>
                                                                     </button>
                                                                 </div>
