Chỉnh giao diện Bài hát

--- a/NgheNhacTrucTuyen/Views/Home/BaiHat.cshtml
+++ b/NgheNhacTrucTuyen/Views/Home/BaiHat.cshtml
@@ -258,7 +258,7 @@
                                                                                 <i class="fa-solid fa-x" onclick="tatmodalthem()"></i>
                                                                             </li>
                                                                             <li>
-                                                                                <form method="post" action="/QLBH/themvaoPL/?id=@ViewBag.baihat.MaBH">
+                                                                                <form method="post" action="/QLBH/ThemvaoPL/?id=@ViewBag.baihat.MaBH">
                                                                                     <select name="TenPL">
                                                                                         <option>Chọn playlist</option>
                                                                                         @foreach (var item in ViewBag.playlists)
