--- a/NgheNhacTrucTuyen/Views/Home/Playlist.cshtml
+++ b/NgheNhacTrucTuyen/Views/Home/Playlist.cshtml
@@ -49,7 +49,7 @@
                                             </span>
                                             <div class="Fb61sprjhh75aOITDnsJ">
                                                 <div class="RANLXG3qKB61Bh33I0r2 NO_VO3MRVl9z3z56d8Lg">
-                                                    <span class="Type__TypeElement-goli3j-0 hkMLug"><a href=""> @ViewBag.tkTen</a></span>
+                                                    <span class="Type__TypeElement-goli3j-0 hkMLug"><a> @ViewBag.tkTen</a></span>
                                                 </div>
                                                 <span class="Type__TypeElement-goli3j-0 iTnRIT RANLXG3qKB61Bh33I0r2">@ViewBag.s bài hát</span>
                                             </div>
@@ -226,8 +226,7 @@
                                                                         <div class="iCQtmPqY0QvkumAOuCjr">
                                                                             <a draggable="false"
                                                                                class="t_yrXoUO3qGsJS4Y6iXX"
-                                                                               data-testid="internal-track-link"
-                                                                               href="/track/4cluDES4hQEUhmXj6TXkSo"
+                                                                               data-testid="internal-track-link"                                                                             
                                                                                tabindex="-1">
                                                                                 <div dir="auto"
                                                                                      class="Type__TypeElement-goli3j-0 dlOSsY t_yrXoUO3qGsJS4Y6iXX standalone-ellipsis-one-line"
@@ -236,8 +235,7 @@
                                                                                 </div>
                                                                             </a><span class="Type__TypeElement-goli3j-0 gPOKDu rq2VQ5mb9SDAFWbBIUIn standalone-ellipsis-one-line">
                                                                                 <a draggable="true"
-                                                                                   dir="auto"
-                                                                                   href="/artist/4AK6F7OLvEQ5QYCBNiQWHq"
+                                                                                   dir="auto"                                                                                  
                                                                                    tabindex="-1">@item.Nhac.CaSi.TenCS</a>
                                                                             </span>
                                                                         </div>
@@ -249,8 +247,7 @@
                                                                         <span class="Type__TypeElement-goli3j-0 iTnRIT">
                                                                             <a draggable="true"
                                                                                class="standalone-ellipsis-one-line"
-                                                                               dir="auto"
-                                                                               href="/album/6cunQQ7YZisYOoiFu2ywIq"
+                                                                               dir="auto"                                                                              
                                                                                tabindex="-1">@item.Nhac.TheLoai.TenTL</a>
                                                                         </span>
                                                                     </div>
