--- a/NgheNhacTrucTuyen/Views/QLBH/DSBaiHat.cshtml
+++ b/NgheNhacTrucTuyen/Views/QLBH/DSBaiHat.cshtml
@@ -22,11 +22,11 @@
                         <thead>
                             <tr>
 
-                                <th>Tên Bài Hát</th>
+                                <th>Tên bài hát</th>
 
                                 <th>Ảnh</th>
                                 <th>Ngày phát hành</th>
-                                <th>Ca Sĩ</th>
+                                <th>Ca sĩ</th>
                                 <th>Tùy chọn</th>
                             </tr>
                         </thead>
