Chỉnh giao diện Playlist

--- a/NgheNhacTrucTuyen/Views/Home/Playlist.cshtml
+++ b/NgheNhacTrucTuyen/Views/Home/Playlist.cshtml
@@ -261,18 +261,18 @@
                                                                          role="gridcell"
                                                                          aria-colindex="5"
                                                                          tabindex="-1">
-                                                                        <button type="button"
-                                                                                role="switch"
-                                                                                aria-checked="false"
-                                                                                aria-label="Lưu vào Thư viện"
-                                                                                class="Fm7C3gdh5Lsc9qSXrQwO tGKwoPuvNBNK3TzCS5OH"
-                                                                                data-testid="add-button"
-                                                                                tabindex="-1">
-                                                                            <i class="fa-regular fa-heart"></i>
-                                                                        </button>
-                                                                        @*<div class="Type__TypeElement-goli3j-0 gPOKDu Btg2qHSuepFGBG6X0yEN">
-                                                                                3:19
-                                                                            </div>*@
+                                                                        @*<button type="button"
+                role="switch"
+                aria-checked="false"
+                aria-label="Lưu vào Thư viện"
+                class="Fm7C3gdh5Lsc9qSXrQwO tGKwoPuvNBNK3TzCS5OH"
+                data-testid="add-button"
+                tabindex="-1">
+            <i class="fa-regular fa-heart"></i>
+        </button>
+        <div class="Type__TypeElement-goli3j-0 gPOKDu Btg2qHSuepFGBG6X0yEN">
+                3:19
+            </div>*@
                                                                         <button type="button"
                                                                                 aria-haspopup="menu"
                                                                                 aria-label="Các tùy chọn khác cho What Makes You Beautiful của One Direction"
