Chỉnh giao diện Login

--- a/NgheNhacTrucTuyen/Views/login/SignUp.cshtml
+++ b/NgheNhacTrucTuyen/Views/login/SignUp.cshtml
@@ -127,7 +127,7 @@
                             <div class="logo">
                                 <i class="fa-solid fa-music fa-3x"></i>
                             </div>
-                            <h1 class="title">NGHE NHẠC TRỰC TUYẾN</h1>
+                            <h1 class="title">NGHE NHẠC</h1>
                             <div class="slogan">Mang lại trải nghiệm mới về âm nhạc</div>
                         </a>
                     </div>
