Chỉnh giao diện Playlist

--- a/NgheNhacTrucTuyen/Views/Home/Playlist.cshtml
+++ b/NgheNhacTrucTuyen/Views/Home/Playlist.cshtml
@@ -280,7 +280,7 @@
                                                                                 data-testid="more-button"
                                                                                 tabindex="-1"
                                                                                 aria-expanded="false">
-                                                                            <i class="fa-solid fa-ellipsis"></i>
+                                                                            <i class="fa-solid fa-trash-can"></i>
                                                                         </button>
                                                                     </div>
                                                                 </div>
