Code xử lí xóa khỏi list

--- a/NgheNhacTrucTuyen/Views/Home/BaiHatYeuThich.cshtml
+++ b/NgheNhacTrucTuyen/Views/Home/BaiHatYeuThich.cshtml
@@ -98,13 +98,7 @@
                                                                 </button>
                                                             </div>
 
-                                                            <button type="button"
-                                                                    aria-haspopup="menu"
-                                                                    aria-label="Các tùy chọn khác cho Chiều Hôm Ấy"
-                                                                    class="T0anrkk_QA4IAQL29get"
-                                                                    data-testid="more-button">
-                                                                <i class="fa-solid fa-ellipsis fa-2x"></i>
-                                                            </button>
+                                                            
                                                         </div>
                                                     </div>
                                                 </div>
@@ -265,15 +259,18 @@
                                                                          aria-colindex="5"
                                                                          tabindex="-1">
 
-                                                                        <button type="button"
-                                                                                aria-haspopup="menu"
-                                                                                aria-label="Các tùy chọn khác cho What Makes You Beautiful của One Direction"
-                                                                                class="T0anrkk_QA4IAQL29get mYN_ST1TsDdC6q1k1_xs"
-                                                                                data-testid="more-button"
-                                                                                tabindex="-1"
-                                                                                aria-expanded="false">
-                                                                            <i class="fa-solid fa-trash-can"></i>
-                                                                        </button>
+                                                                        <form action="/QLBH/XoakhoiYT" method="post" style="display: inline;">
+                                                                            <input type="hidden" name="id" value="@item.Nhac.MaBH">
+                                                                            <button type="submit"
+                                                                                    aria-haspopup="menu"
+                                                                                    aria-label="Các tùy chọn khác cho What Makes You Beautiful của One Direction"
+                                                                                    class="T0anrkk_QA4IAQL29get mYN_ST1TsDdC6q1k1_xs"
+                                                                                    data-testid="more-button"
+                                                                                    tabindex="-1"
+                                                                                    aria-expanded="false">
+                                                                                <i class="fa-solid fa-trash-can"></i>
+                                                                            </button>
+                                                                        </form>
                                                                     </div>
                                                                 </div>
                                                             </div>
