--- a/NgheNhacTrucTuyen/Views/Home/Playlist.cshtml
+++ b/NgheNhacTrucTuyen/Views/Home/Playlist.cshtml
@@ -273,15 +273,19 @@
         <div class="Type__TypeElement-goli3j-0 gPOKDu Btg2qHSuepFGBG6X0yEN">
                 3:19
             </div>*@
-                                                                        <button type="button"
-                                                                                aria-haspopup="menu"
-                                                                                aria-label="Các tùy chọn khác cho What Makes You Beautiful của One Direction"
-                                                                                class="T0anrkk_QA4IAQL29get mYN_ST1TsDdC6q1k1_xs"
-                                                                                data-testid="more-button"
-                                                                                tabindex="-1"
-                                                                                aria-expanded="false">
-                                                                            <i class="fa-solid fa-trash-can"></i>
-                                                                        </button>
+                                                                        <form action="/QLBH/XoakhoiPL" method="post" style="display: inline;">
+                                                                            <input type="hidden" name="id" value="@item.Nhac.MaBH"> 
+                                                                            <input type="hidden" name="TenPL" value="@ViewBag.ten"> 
+                                                                            <button type="submit"
+                                                                                    aria-haspopup="menu"
+                                                                                    aria-label="Các tùy chọn khác cho What Makes You Beautiful của One Direction"
+                                                                                    class="T0anrkk_QA4IAQL29get mYN_ST1TsDdC6q1k1_xs"
+                                                                                    data-testid="more-button"
+                                                                                    tabindex="-1"
+                                                                                    aria-expanded="false">
+                                                                                <i class="fa-solid fa-trash-can"></i>
+                                                                            </button>
+                                                                        </form>
                                                                     </div>
                                                                 </div>
                                                             </div>
